--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "zhenmu/laravel-template": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -58,5 +59,9 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
-    }
+    },
+    "repositories": [{
+            "type": "path",
+            "url": "packages/zhenmu/laravel-template"
+        }]
 }
