feat: 修改 provider 名字

--- a/composer.json
+++ b/composer.json
@@ -60,8 +60,10 @@
             "@php artisan key:generate --ansi"
         ]
     },
-    "repositories": [{
+    "repositories": [
+        {
             "type": "path",
             "url": "packages/zhenmu/laravel-template"
-        }]
+        }
+    ]
 }
