--- a/packages/zhenmu/laravel-template/composer.json
+++ b/packages/zhenmu/laravel-template/composer.json
@@ -17,12 +17,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "ZhenMu\\LaravelTemplate\\Providers\\TemplateAppServiceProvider"
+                "ZhenMu\\LaravelTemplate\\Providers\\AppServiceProvider"
             ]
         }
-    },
-    "repositories": [{
-            "type": "path",
-            "url": "packages/zhenmu/laravel-template"
-        }]
+    }
 }
