feat: 修复兼容 laravel8

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "minimum-stability": "dev",
     "require": {
         "ext-json": "*",
-        "tymon/jwt-auth": "2.0.x-dev"
+        "tymon/jwt-auth": "2.0.x-dev|^1"
     },
     "autoload": {
         "psr-4": {
