feat: 添加 sql 日志记录功能

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "ZhenMu\\LaravelInitTemplate\\Providers\\AppServiceProvider"
+                "ZhenMu\\LaravelInitTemplate\\Providers\\AppServiceProvider",
+                "ZhenMu\\LaravelInitTemplate\\Providers\\SqlLogServiceProvider"
             ]
         }
     },
