--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "tymon/jwt-auth": "2.0.x-dev|^1",
         "symfony/cache": "^3.3 || ^4.3 || ^5.0",
         "cblink/yapi-doc": "dev-master",
-        "overtrue/laravel-filesystem-qiniu": "^1.0"
+        "overtrue/easy-sms": "^1.3",
+        "overtrue/laravel-filesystem-qiniu": "^1.0",
+        "zgldh/qiniu-laravel-storage": "^0.10.4"
     },
     "autoload": {
         "psr-4": {
