--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "ext-json": "*",
         "zhenmu/support": "dev-master",
-        "tymon/jwt-auth": "2.0.x-dev|^1",
+        "tymon/jwt-auth": "2.0.x-dev || ^1 || dev-develop",
         "symfony/cache": "^3.3 || ^4.3 || ^5.0",
         "cblink/yapi-doc": "dev-master",
         "overtrue/easy-sms": "^1.3",
