--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "ext-json": "*",
         "zhenmu/support": "dev-master",
         "tymon/jwt-auth": "2.0.x-dev || ^1 || dev-develop",
-        "symfony/cache": "^3.3 || ^4.3 || ^5.0",
+        "symfony/cache": "^3.0 || ^4.0 || ^5.0 || ^6.0",
         "cblink/yapi-doc": "dev-master",
         "overtrue/easy-sms": "^1.3",
         "overtrue/laravel-filesystem-qiniu": "^1.0",
